--- a/bundles/stdcompat/stdcompat-6/Makefile.am
+++ b/bundles/stdcompat/stdcompat-6/Makefile.am
@@ -93,6 +93,6 @@ stdcompat_tests: stdcompat.$(CMAX)
 
 @INCLUDE_DEPEND@
 
-CLEANFILES = *.cmi *.cmo *.cmx *.o *.a stdcompat.cma stdcompat.cmxa \
-	stdcompat__native.ml \
-	stdcompat.cmxs stdcompat_tests $(bin_SCRIPTS) *~
+CLEANFILES = *.cmi *.cmo *.cmx *.cmt *.cmti *.o *.a stdcompat.cma \
+	stdcompat.cmxa stdcompat__native.ml \
+	stdcompat.cmxs stdcompat_tests $(bin_SCRIPTS)
