Configuring stdcompat during configure
Following a suggestion from Michele Martone.

--- a/bundles/stdcompat/Makefile
+++ b/bundles/stdcompat/Makefile
@@ -1,10 +1,6 @@
 .PHONY : all
 all :
-# Hack to make these files fresh
-#	touch stdcompat-6/Makefile.in
-#	touch stdcompat-6/aclocal.m4
-	cd stdcompat-6; OCAMLFIND= ./configure && make && \
-		cp *.mli *.cmi *.cmx *.cma *.cmxa *.a ..
+	cd stdcompat-6; make && cp *.mli *.cmi *.cmx *.cma *.cmxa *.a ..
 
 .PHONY : clean
 clean :
