Add protect to stdcompat pervasives interface

--- a/bundles/stdcompat/stdcompat-7/stdcompat__pervasives_s.mli.in
+++ b/bundles/stdcompat/stdcompat-7/stdcompat__pervasives_s.mli.in
@@ -58,6 +58,8 @@ module type S = sig
   type ('a, 'b, 'c, 'd) format4 = ('a, 'b, 'c, 'c, 'c, 'd) format6
   
   type ('a, 'b, 'c) format = ('a, 'b, 'c, 'c) format4
+
+  val protect : finally:(unit -> unit) -> (unit -> 'a) -> 'a
   
   val stdin : in_channel
   
