--- a/bundles/stdcompat/stdcompat-7/stdcompat__init.mli.in
+++ b/bundles/stdcompat/stdcompat-7/stdcompat__init.mli.in
@@ -31,3 +31,16 @@ type nonrec bytes = bytes
 @BEGIN_BEFORE_4_02_0@
 type bytes = string
 @END_BEFORE_4_02_0@
+
+type ('a, 'b) result =
+@BEGIN_FROM_4_06_0@
+('a, 'b) Pervasives.result =
+@END_FROM_4_06_0@
+@BEGIN_BEFORE_4_06_0@
+@BEGIN_WITH_RESULT_PKG@
+('a, 'b) Result.result =
+@END_WITH_RESULT_PKG@
+@END_BEFORE_4_06_0@
+  | Ok of 'a 
+  | Error of 'b
+
