Update Makefiles for PPA releases

--- a/Makefile.dev
+++ b/Makefile.dev
@@ -48,7 +48,7 @@ RELEASE=$(shell echo $(BRANCH) | cut -f1 -d'-')
 CODENAME=$(shell echo $(BRANCH) | cut -f2 -d'-')
 IDX?=1
 
-.PHONY:: ubuntu
+.PHONY: ubuntu
 
 #
 # This requires the "devscripts" package.
