Include Makefile.config to setup VERSION variable

--- a/Makefile.dev
+++ b/Makefile.dev
@@ -6,6 +6,8 @@
 # Website targets
 ##############################################################################
 
+include Makefile.config
+
 WEBBASE=~/website
 WEBSITE=$(WEBBASE)/distrib
 
