Include Makefile.config to setup VERSION variable

--- a/Makefile.release
+++ b/Makefile.release
@@ -272,6 +272,8 @@ ocamlversion:
 # The 'packbin' target is to build a deb package
 # locally. It is only for testing purpose.
 #
+PRJNAME=coccinelle
+include Makefile.config
 
 EXCL_SYNC=--exclude ".git"          \
 	--exclude ".gitignore"      \
