--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends:
  python-dev,
  menhir (>= 20090204.dfsg),
  libmenhir-ocaml-dev (>= 20090204.dfsg),
- libsexplib-camlp4-dev,
+ libsexplib-ocaml-dev,
  libpcre-ocaml-dev,
  libparmap-ocaml-dev,
  texlive-latex-base,
