Don't distclean pyml_arch.mli

--- a/bundles/pyml/Makefile
+++ b/bundles/pyml/Makefile
@@ -3,16 +3,16 @@
 
 PYML_VERSION=current
 
-PACKAGE_DIR=pyml-$(PYML_VERSION)
+PACKAGE_DIR := pyml-$(PYML_VERSION)
 TARBALL=
 MODULES=pyml_arch pyutils pytypes pywrappers py pycaml
-PRODUCTS=pyml_arch
 OBJS=$(MODULES)
 INTERFACES=pywrappers py pycaml
 C_OBJS=pyml
 ARCHIVE=pyml
 LIBRARY=pyml
-SRC_DIR=$(PACKAGE_DIR)
+SRC_DIR := $(PACKAGE_DIR)
+OTHERS := $(SRC_DIR)/pyml_arch.ml
 OCAMLFLAGS+=-I ../stdcompat
 CLEANOTHERS=pyml-current/generate pyml-current/generate.cmi \
 	pyml-current/generate.cmx pyml-current/generate.cmo \
