Fix bundles menhir, pcre and pyml when stdcompat is installed
Makefiles supposed that the bundle stdcompat was available, which is
no longer the case if stdcompat is installed on the system.

--- a/bundles/menhirLib/Makefile
+++ b/bundles/menhirLib/Makefile
@@ -33,7 +33,7 @@ GENERATED_SOURCE_FILES := $(SRC_DIR)/installation.ml
 CLEANOTHERS := menhirLib.ml menhirLib.mli syntax.cmi $(SRC_DIR)/parser.mly $(SRC_DIR)/menhir $(SRC_DIR)/installation.ml
 
 OCAMLLDFLAGS=unix.cmxa
-OCAMLFLAGS+=-I ../stdcompat
+OCAMLFLAGS+=-I $(STDCOMPATDIR)
 
 MENHIRLIB_MODULES= \
 	General IncrementalEngine InfiniteArray PackedIntArray LinearizedArray RowDisplacement \
