--- a/Makefile.config.in
+++ b/Makefile.config.in
@@ -62,7 +62,7 @@ export CPPFLAGS=@CPPFLAGS@
 MKDIR_P=@MKDIR_P@
 
 # the default Make target
-# Can be overriden e.g. in Makefile.local
+# Can be overridden e.g. in Makefile.local
 TARGET_ALL=all-release
 EXTRA_OCAML_FLAGS=-unsafe
 TARGET_SPATCH=@MAKETARGET_SPATCH@
