ocamldep should not go through dependencies!

--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -6,7 +6,7 @@ OCAMLOPT_CMD= \
 	$(OCAMLOPT) $(OCAMLOPTFLAGS) $(OCAMLFLAGS) \
 	$(EXTRACFLAGS)
 OCAMLMKLIB_CMD=$(OCAMLMKLIB) -linkall $(EXTRALNKFLAGS)
-OCAMLDEP_CMD=$(OCAMLDEP) $(OCAMLDEPFLAGS) $(OCAMLFLAGS)
+OCAMLDEP_CMD=$(OCAMLDEP) $(OCAMLDEPFLAGS)
 
 OCAMLC_LDFLAGS = $(patsubst %,-custom -cclib -l%_stubs,$(LIBRARY)) \
 	$(addprefix -cclib -l,$(C_LIBS))
