Restore -I flags to ocamldep command lines in bundles

--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -1,4 +1,5 @@
-OCAMLFLAGS+=-I $(SRC_DIR)
+OCAML_INCLUDE_FLAGS := -I $(SRC_DIR)
+OCAMLFLAGS += $(OCAML_INCLUDE_FLAGS)
 OCAMLC_CMD= \
 	$(OCAMLC) $(OCAMLCFLAGS) $(OCAMLFLAGS) \
 	$(EXTRACFLAGS)
@@ -6,7 +7,7 @@ OCAMLOPT_CMD= \
 	$(OCAMLOPT) $(OCAMLOPTFLAGS) $(OCAMLFLAGS) \
 	$(EXTRACFLAGS)
 OCAMLMKLIB_CMD=$(OCAMLMKLIB) -linkall $(EXTRALNKFLAGS)
-OCAMLDEP_CMD=$(OCAMLDEP) $(OCAMLDEPFLAGS)
+OCAMLDEP_CMD=$(OCAMLDEP) $(OCAMLDEPFLAGS) $(OCAML_INCLUDE_FLAGS)
 
 OCAMLC_LDFLAGS = $(patsubst %,-custom -cclib -l%_stubs,$(LIBRARY)) \
 	$(addprefix -cclib -l,$(C_LIBS))
