Keep VERSION variable for Ubuntu changelog

--- a/Makefile.dev
+++ b/Makefile.dev
@@ -37,6 +37,8 @@ website:
 ##############################################################################
 # Targets to update PPA
 ##############################################################################
+PRJNAME=coccinelle
+VERSION?=$(shell MAKE_COCCI_RELEASE="y" ./version.sh)
 
 # precise - 12.04
 # saucy - 13.10
