python: gtk: remove the gtk output
This removes the dependency on pygtk which is not maintained anymore
and updates the documentation accordingly

Removing the GTK output for python has been approved on the assumption
that no one uses it

--- a/docs/spatch.1.in
+++ b/docs/spatch.1.in
@@ -219,7 +219,7 @@ find relevant files using id\-utils
 <file> improve \fB\-\-dir\fR by grouping related c files
 .TP
 \fB\-\-pyoutput\fR
-Sets output routine: Standard values: <coccilib.output.Gtk|coccilib.output.Console>
+Sets output routine: Default value: coccilib.output.Console
 .TP
 \fB\-\-version\fR
 guess what
