--- a/ci/Dockerfile.build
+++ b/ci/Dockerfile.build
@@ -1,4 +1,4 @@
 ARG from
 FROM $from
 COPY --chown=ci . /home/ci/coccinelle/
-RUN cd /home/ci/coccinelle && ./autogen.sh && ./configure && make
+RUN cd /home/ci/coccinelle && ./autogen && ./configure && make
