--- a/ci/distributions/common/Dockerfile
+++ b/ci/distributions/common/Dockerfile
@@ -13,7 +13,7 @@ ARG ocaml_version
 RUN opam switch create $ocaml_version
 # TODO Sadly, ocamlfind looks to be a dependency for Coccinelle
 # (needed for parmap bundle)
-RUN opam install ocamlfind
+RUN opam install --yes ocamlfind
 ARG stdcompat
 RUN [ x$stdcompat != xyes ] || opam install --yes stdcompat
 ARG pyml
