--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -146,10 +146,11 @@ build with opensuse/leap:
   stage: test
   script:
     - docker create --name coccinelle-with-$from coccinelle-with-$from
+        /home/ci/coccinelle/ci/test-script.sh
     - test ! -f /home/ci/score_with_$from || docker cp
         /home/ci/score_with_$from
         coccinelle-with-$from:/home/ci/coccinelle/test/SCORE_excepted.sexp
-    - docker start coccinelle-with-$from /home/ci/coccinelle/ci/test-script.sh
+    - docker start coccinelle-with-$from
     - docker cp
         coccinelle-with-$from:/home/ci/coccinelle/test/SCORE_excepted.sexp
         /home/ci/score_with_$from
