Get rid of "setrlimit(RLIMIT_CORE): Operation not permitted" warning

--- a/ci/distributions/debian/Dockerfile
+++ b/ci/distributions/debian/Dockerfile
@@ -2,4 +2,6 @@ FROM debian:testing
 RUN apt-get update && apt-get install --yes autoconf automake unzip aspcud \
   rsync git mercurial darcs build-essential sudo vim curl python libpython-dev
 RUN adduser --disabled-password --gecos ci --shell /bin/bash ci
-
+# Get rid of the "setrlimit(RLIMIT_CORE): Operation not permitted" warning
+# See https://bugzilla.redhat.com/show_bug.cgi?id=1773148
+RUN echo Set disable_coredump false >/etc/sudo.conf
