--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -214,3 +214,8 @@ push reference scores:
         git commit -m "reference scores for commit $CI_COMMIT_SHORT_SHA" &&
         git push
       || true
+
+docker system prune:
+  stage: .post
+  script:
+    - docker system prune
