Coccinelle should now work with the last version of pyml (20200222)

--- a/ci/distributions/common/Dockerfile
+++ b/ci/distributions/common/Dockerfile
@@ -17,7 +17,7 @@ RUN opam install --yes ocamlfind
 ARG stdcompat
 RUN [ x$stdcompat != xyes ] || opam install --yes stdcompat
 ARG pyml
-RUN [ x$pyml != xyes ] || opam install --yes pyml.20190626
+RUN [ x$pyml != xyes ] || opam install --yes pyml
 ARG menhir
 RUN [ x$menhir != xyes ] || opam install --yes menhir
 ARG parmap
